trying to fix card height on mobile

--- a/familyoffice/css/styles.less
+++ b/familyoffice/css/styles.less
@@ -118,6 +118,9 @@ h6 {
 @media screen and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 2) {
     .card-brick {
         width: 50%;
+        &.open {
+            height: 95vh !important;
+        }
         .card-wrapper {
             padding: 1.7em;
             .card {
